[build-system]
requires = [
    "setuptools >= 35.0.2",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py3<bootstrap-python-minor>']

[tool.isort]
profile = "black"
py_version=3<bootstrap-python-minor>
skip = [
    ".git",
    ".tox",
    ".venv",
]

[tool.flake8]
exclude = [
    ".git",
    ".tox",
    ".venv",
]
max-line-length = 88
extend-ignore = [
    "E203",
    "E701",
]
import-order-style = "pep8"
application-import-names = ["<bootstrap-dir>"]

[tool.mypy]
check_untyped_defs = true
exclude = "/(.venv)"
files = "**/*.py"
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.<bootstrap-python-minor>"
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "<bootstrap-dir>.tests.*"
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "method-assign",
]

[tool.coverage.run]
omit = ["<bootstrap-dir>/tests/*"]
source = ["<bootstrap-dir>"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if t.TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
omit = ["<bootstrap-dir>/tests/*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = cs,ann,utc

[testenv:format]
description = Formats code by black and isort tools
deps =
    black
    isort
commands =
    isort <bootstrap-dir>
    black <bootstrap-dir>

[testenv:cs]
description = Checks code style by black, isort and flake8 tools
deps =
    black
    isort
    flake8
    flake8-pyproject
commands =
    isort --check-only --diff <bootstrap-dir>
    black --check --diff <bootstrap-dir>
    flake8 <bootstrap-dir>

[testenv:ann]
description = Checks types annotations by mypy
deps =
    mypy
commands =
    mypy <bootstrap-dir>

[testenv:utc]
description = Runs tests under coverage, prints a text report and builds HTML report
deps =
    --requirement requirements.txt
    coverage
commands =
    coverage run --module unittest discover --verbose <bootstrap-dir>/tests
    coverage report
    coverage html
"""
